--- a/portfolio.html
+++ b/portfolio.html
@@ -28,7 +28,7 @@
 		       		<a href="http://bealimpetersen.dk/blog/?page_id=174"><img src="IMG/movingart.jpg" width="200px" height="200px"></a>
 		       		<a href="http://bealimpetersen.dk/blog/?page_id=398"><img src="IMG/krabbe.jpg" width="200px" height="200px"></a>
 		       		<a href="http://bealimpetersen.dk/blog/?page_id=66"><img src="IMG/stopmotion.jpg" width="200px" height="200px"></a>
-		       		<a href="#"><img src="IMG/icon-photo.png" width="500px" height="500px"></a>
+		       		<a href="http://bealimpetersen.dk/blog/?page_id=332"><img src="IMG/emilspizza.jpg" width="200px" height="200px"></a>
 		       		<a href="#"><img src="IMG/icon-photo.png" width="200px" height="200px"></a>
 		       		<a href="#"><img src="IMG/icon-photo.png" width="200px" height="200px"></a>
 		       		<a href="http://bealimpetersen.dk/blog/?page_id=402"><img src="IMG/Rune.jpg" width="200px" height="200px"></a>
