--- a/index.html
+++ b/index.html
@@ -97,21 +97,21 @@
             <section class="portfolio">
                 <h1>Portefølje</h1>
                     <div class="gallery">
-                        <a href="http://bealimpetersen.dk/blog/?page_id=402"><img src="IMG/pentoolopg.jpg" width="200px" height="200px"></a>
-                        <a href="http://bealimpetersen.dk/blog/?page_id=402"><img src="IMG/Rune.jpg" width="200px" height="200px"></a>
-                        <a href="#"><img src="IMG/icon-photo.png" width="200px" height="200px"></a>
-                        <a href="#"><img src="IMG/icon-photo.png" width="200px" height="200px"></a>
-                        <a href="#"><img src="IMG/icon-photo.png" width="200px" height="200px"></a>
-                        <a href="#"><img src="IMG/icon-photo.png" width="200px" height="200px"></a>
-                        <a href="#"><img src="IMG/icon-photo.png" width="200px" height="200px"></a>
-                        <a href="#"><img src="IMG/icon-photo.png" width="200px" height="200px"></a>
-                        <a href="#"><img src="IMG/icon-photo.png" width="200px" height="200px"></a>
-                        <a href="#"><img src="IMG/icon-photo.png" width="200px" height="200px"></a>
-                        <a href="#"><img src="IMG/icon-photo.png" width="200px" height="200px"></a>
-                        <a href="#"><img src="IMG/icon-photo.png" width="200px" height="200px"></a>
-                        <a href="#"><img src="IMG/icon-photo.png" width="200px" height="200px"></a>
-                        <a href="#"><img src="IMG/icon-photo.png" width="200px" height="200px"></a>
-                        <a href="#"><img src="IMG/icon-photo.png" width="200px" height="200px"></a>
+                    <a href="http://bealimpetersen.dk/blog/?page_id=402"><img src="IMG/pentoolopg.jpg" width="200px" height="200px"></a>
+                    <a href="http://bealimpetersen.dk/blog/?page_id=530&preview_id=530&preview_nonce=e840238d1a&preview=true"><img src="IMG/frog.jpg" width="200px" height="200px"></a>
+                    <a href="http://bealimpetersen.dk/blog/?page_id=174"><img src="IMG/movingart.jpg" width="200px" height="200px"></a>
+                    <a href="http://bealimpetersen.dk/blog/?page_id=398"><img src="IMG/krabbe.jpg" width="200px" height="200px"></a>
+                    <a href="http://bealimpetersen.dk/blog/?page_id=66"><img src="IMG/stopmotion.jpg" width="200px" height="200px"></a>
+                    <a href="http://bealimpetersen.dk/blog/?page_id=332"><img src="IMG/emilspizza.jpg" width="200px" height="200px"></a>
+                    <a href="http://bealimpetersen.dk/blog/?page_id=268"><img src="IMG/movie1.jpg" width="200px" height="200px"></a>
+                    <a href="#"><img src="IMG/kamera.jpg" width="200px" height="200px"></a>
+                    <a href="http://bealimpetersen.dk/blog/?page_id=402"><img src="IMG/Rune.jpg" width="200px" height="200px"></a>
+                    <a href="http://bealimpetersen.dk/blog/?page_id=530&preview_id=530&preview_nonce=e840238d1a&preview=true"><img src="IMG/reklamevand.jpg" width="200px" height="200px"></a>
+                    <a href="http://bealimpetersen.dk/blog/?page_id=174"><img src="IMG/monthy.jpg" width="200px" height="200px"></a>
+                    <a href="#"><img src="IMG/icon-photo.png" width="200px" height="200px"></a>
+                    <a href="#"><img src="IMG/icon-photo.png" width="200px" height="200px"></a>
+                    <a href="#"><img src="IMG/icon-photo.png" width="200px" height="200px"></a>
+                    <a href="#"><img src="IMG/icon-photo.png" width="200px" height="200px"></a>
                     </div>
             </section>
 
