--- a/index.html
+++ b/index.html
@@ -25,8 +25,9 @@
                     <h1>Bea Lim Petersen</h1>
                     Velkommen til mit digitale skrivebord! 
                     <br>
+                    Se mit arbejde her
+                    <br>
                         <ul>
-                            <li><a href="index.html">Om mig</a></li>
                             <li><a href="portfolio.html">Portefølje</a></li>
                         </ul>
                 </div>
