--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Beas præstationsportfølje</title>
+        <script src="https://kit.fontawesome.com/7046dc2e9b.js" crossorigin="anonymous"></script>
         <meta charset="utf-8">
         <link rel="stylesheet" type="text/css" href="CSS/style.css" >
     </head>
@@ -116,7 +117,6 @@
                     </div>
             </section>
 
-   
             <footer>
                 <div class="pinkbox1">
                 <h1>Kontaktoplysninger</h1> 
@@ -130,10 +130,8 @@
                         </div>
                         <div class="socialmedia">
                             <p><b>Sociale medier:</b></p>
-                            <p>Instagram:</p>
-                            <p>https://www.instagram.com/bealimpetersen/</p>
-                            <p>Facebook:</p> 
-                            <p>https://www.facebook.com/bea.l.petersen/</p>
+                            <a href="https://www.instagram.com/bealimpetersen/"><i class="fab fa-instagram"></i></a>
+                            <a href="https://www.facebook.com/bea.l.petersen"><i class="fab fa-facebook-square"></i></a>
                         </div>
                     </div>
             </footer> 
