--- a/portfolio.html
+++ b/portfolio.html
@@ -3,6 +3,7 @@
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Beas præstationsportfølje</title>
+        <script src="https://kit.fontawesome.com/7046dc2e9b.js" crossorigin="anonymous"></script>
         <meta charset="utf-8">
         <link rel="stylesheet" type="text/css" href="CSS/style.css" >
     </head>
@@ -48,27 +49,19 @@
                 <h1>Kontaktoplysninger</h1> 
                 <h2>Tak for besøget!</h2>
                     <div class="oplysninger">
-                        <p class="kontaktoplysninger">
-                        <b>Kontaktoplysninger:</b>
-                        <br>
-                        Bea Lim Petersen 
-                        <br>    
-                        Mail: Bealimpetersen@hotmail.com
-                        <br>
-                        tlf.: +45 31 35 35 57
-                        </p>
-                        <p class="socialmedia">
-                        <b>Sociale medier:</b>
-                        <br>
-                        Instagram: 
-                        <br>
-                        Facebook: 
-                        <br>
-                        </p>
+                        <div class="kontaktoplysninger">
+							<p><b>Kontaktoplysninger:</b></p>
+                            <p>Bea Lim Petersen </p> 
+                            <p>Mail: Bealimpetersen@hotmail.com</p>
+                            <p>tlf.: +45 31 35 35 57</p>
+                        </div>
+                        <div class="socialmedia">
+	                        <p><b>Sociale medier:</b></p>
+	                       	<a href="https://www.instagram.com/bealimpetersen/"><i class="fab fa-instagram"></i></a>
+	                        <a href="https://www.facebook.com/bea.l.petersen"><i class="fab fa-facebook-square"></i></a>
                     </div>
             </div>
         </footer>
-
 
     </body>
     </html>
