changed size in html to css

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                         <h1>Mine kompetencer</h1>
                             <div class="icons">
                                 <div class="icon__container">
-                                    <img src="IMG/icon-pen.png" width="150px" height="150px">
+                                    <img src="IMG/icon-pen.png">
                                     <p>
                                         Har en stor passion for grafisk design, både digitalt og til print. 
                                     <br>
@@ -74,7 +74,7 @@
                                     </p>
                                 </div>
                                 <div class="icon__container">
-                                    <img src="IMG/icon-lightbulb.png" width="150px" height="150px">
+                                    <img src="IMG/icon-lightbulb.png">
                                     <p>
                                     Har en stor passion for grafisk design, både digitalt og til print. 
                                     <br>
@@ -82,7 +82,7 @@
                                     </p>
                                 </div>
                                  <div class="icon__container">
-                                    <img src="IMG/icon-photo.png" width="150px" height="150px">
+                                    <img src="IMG/icon-photo.png">
                                     <p>
                                         Et billede siger mere end 1000 ord - 
                                     <br>
@@ -99,28 +99,28 @@
             <section class="portfolio">
                 <h1>Portefølje</h1>
                     <div class="gallery">
-                    <a href="http://bealimpetersen.dk/blog/?page_id=402"><img src="IMG/pentoolopg.jpg"></a>
-                    <a href="http://bealimpetersen.dk/blog/?page_id=530&preview_id=530&preview_nonce=e840238d1a&preview=true"><img src="IMG/frog.jpg"></a>
-                    <a href="http://bealimpetersen.dk/blog/?page_id=174"><img src="IMG/movingart.jpg"></a>
-                    <a href="http://bealimpetersen.dk/blog/?page_id=398"><img src="IMG/krabbe.jpg"></a>
-                    <a href="http://bealimpetersen.dk/blog/?page_id=66"><img src="IMG/stopmotion.jpg"></a>
-                    <a href="http://bealimpetersen.dk/blog/?page_id=332"><img src="IMG/emilspizza.jpg"></a>
-                    <a href="http://bealimpetersen.dk/blog/?page_id=268"><img src="IMG/movie1.jpg"></a>
-                    <a href="#"><img src="IMG/kamera.jpg"></a>
-                    <a href="http://bealimpetersen.dk/blog/?page_id=402"><img src="IMG/Rune.jpg"></a>
-                    <a href="http://bealimpetersen.dk/blog/?page_id=530&preview_id=530&preview_nonce=e840238d1a&preview=true"><img src="IMG/reklamevand.jpg"></a>
-                    <a href="http://bealimpetersen.dk/blog/?page_id=174"><img src="IMG/monthy.jpg"></a>
-                    <a href="#"><img src="IMG/icon-photo.png"></a>
-                    <a href="#"><img src="IMG/icon-photo.png"></a>
-                    <a href="#"><img src="IMG/icon-photo.png"></a>
-                    <a href="#"><img src="IMG/icon-photo.png"></a>
+                        <a href="http://bealimpetersen.dk/blog/?page_id=402"><img src="IMG/pentoolopg.jpg"></a>
+                        <a href="http://bealimpetersen.dk/blog/?page_id=530&preview_id=530&preview_nonce=e840238d1a&preview=true"><img src="IMG/frog.jpg"></a>
+                        <a href="http://bealimpetersen.dk/blog/?page_id=174"><img src="IMG/movingart.jpg"></a>
+                        <a href="http://bealimpetersen.dk/blog/?page_id=398"><img src="IMG/krabbe.jpg"></a>
+                        <a href="http://bealimpetersen.dk/blog/?page_id=66"><img src="IMG/stopmotion.jpg"></a>
+                        <a href="http://bealimpetersen.dk/blog/?page_id=332"><img src="IMG/emilspizza.jpg"></a>
+                        <a href="http://bealimpetersen.dk/blog/?page_id=268"><img src="IMG/movie1.jpg"></a>
+                        <a href="#"><img src="IMG/kamera.jpg"></a>
+                        <a href="http://bealimpetersen.dk/blog/?page_id=402"><img src="IMG/Rune.jpg"></a>
+                        <a href="http://bealimpetersen.dk/blog/?page_id=530&preview_id=530&preview_nonce=e840238d1a&preview=true"><img src="IMG/reklamevand.jpg"></a>
+                        <a href="http://bealimpetersen.dk/blog/?page_id=174"><img src="IMG/monthy.jpg"></a>
+                        <a href="#"><img src="IMG/icon-photo.png"></a>
+                        <a href="#"><img src="IMG/icon-photo.png"></a>
+                        <a href="#"><img src="IMG/icon-photo.png"></a>
+                        <a href="#"><img src="IMG/icon-photo.png"></a>
                     </div>
             </section>
 
             <footer>
                 <div class="pinkbox1">
-                <h1>Kontaktoplysninger</h1> 
-                <h2>Tak for besøget!</h2>
+                    <h1>Kontaktoplysninger</h1> 
+                    <h2>Tak for besøget!</h2>
                     <div class="oplysninger">
                         <div class="kontaktoplysninger">
                             <p><b>Kontaktoplysninger:</b></p>
@@ -134,6 +134,7 @@
                             <a href="https://www.facebook.com/bea.l.petersen"><i class="fab fa-facebook-square"></i></a>
                         </div>
                     </div>
+                </div>
             </footer> 
                
     </body>
