--- a/portfolio.html
+++ b/portfolio.html
@@ -48,18 +48,19 @@
             <div class="pinkbox1">
                 <h1>Kontaktoplysninger</h1> 
                 <h2>Tak for besøget!</h2>
-                    <div class="oplysninger">
-                        <div class="kontaktoplysninger">
-							<p><b>Kontaktoplysninger:</b></p>
-                            <p>Bea Lim Petersen </p> 
-                            <p>Mail: Bealimpetersen@hotmail.com</p>
-                            <p>tlf.: +45 31 35 35 57</p>
+                <div class="oplysninger">
+                    <div class="kontaktoplysninger">
+						<p><b>Kontaktoplysninger:</b></p>
+                        <p>Bea Lim Petersen </p> 
+                        <p>Mail: Bealimpetersen@hotmail.com</p>
+                        <p>tlf.: +45 31 35 35 57</p>
                         </div>
-                        <div class="socialmedia">
-	                        <p><b>Sociale medier:</b></p>
-	                       	<a href="https://www.instagram.com/bealimpetersen/"><i class="fab fa-instagram"></i></a>
-	                        <a href="https://www.facebook.com/bea.l.petersen"><i class="fab fa-facebook-square"></i></a>
+                    <div class="socialmedia">
+	                <p><b>Sociale medier:</b></p>
+	                <a href="https://www.instagram.com/bealimpetersen/"><i class="fab fa-instagram"></i></a>
+	                <a href="https://www.facebook.com/bea.l.petersen"><i class="fab fa-facebook-square"></i></a>
                     </div>
+            	</div>
             </div>
         </footer>
 
