alt tilføjet til billeder

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                         <h1>Mine kompetencer</h1>
                             <div class="icons">
                                 <div class="icon__container">
-                                    <img src="IMG/icon-pen.png">
+                                    <img src="IMG/icon-pen.png" alt="icon-pen">
                                     <p>
                                         Har en stor passion for grafisk design, både digitalt og til print. 
                                     <br>
@@ -74,7 +74,7 @@
                                     </p>
                                 </div>
                                 <div class="icon__container">
-                                    <img src="IMG/icon-lightbulb.png">
+                                    <img src="IMG/icon-lightbulb.png" alt="icon-lightbulb">
                                     <p>
                                     Har en stor passion for grafisk design, både digitalt og til print. 
                                     <br>
@@ -82,7 +82,7 @@
                                     </p>
                                 </div>
                                  <div class="icon__container">
-                                    <img src="IMG/icon-photo.png">
+                                    <img src="IMG/icon-photo.png" alt="icon-photo">
                                     <p>
                                         Et billede siger mere end 1000 ord - 
                                     <br>
@@ -99,17 +99,17 @@
             <section class="portfolio">
                 <h1>Portefølje</h1>
                     <div class="gallery">
-                        <a href="http://bealimpetersen.dk/blog/?page_id=402"><img src="IMG/pentoolopg.jpg"></a>
-                        <a href="http://bealimpetersen.dk/blog/?page_id=530&preview_id=530&preview_nonce=e840238d1a&preview=true"><img src="IMG/frog.jpg"></a>
-                        <a href="http://bealimpetersen.dk/blog/?page_id=174"><img src="IMG/movingart.jpg"></a>
-                        <a href="http://bealimpetersen.dk/blog/?page_id=398"><img src="IMG/krabbe.jpg"></a>
-                        <a href="http://bealimpetersen.dk/blog/?page_id=66"><img src="IMG/stopmotion.jpg"></a>
-                        <a href="http://bealimpetersen.dk/blog/?page_id=332"><img src="IMG/emilspizza.jpg"></a>
-                        <a href="http://bealimpetersen.dk/blog/?page_id=268"><img src="IMG/movie1.jpg"></a>
-                        <a href="#"><img src="IMG/kamera.jpg"></a>
-                        <a href="http://bealimpetersen.dk/blog/?page_id=402"><img src="IMG/Rune.jpg"></a>
-                        <a href="http://bealimpetersen.dk/blog/?page_id=530&preview_id=530&preview_nonce=e840238d1a&preview=true"><img src="IMG/reklamevand.jpg"></a>
-                        <a href="http://bealimpetersen.dk/blog/?page_id=174"><img src="IMG/monthy.jpg"></a>
+                        <a href="http://bealimpetersen.dk/blog/?page_id=402"><img src="IMG/pentoolopg.jpg" alt="bea-pentool"></a>
+                        <a href="http://bealimpetersen.dk/blog/?page_id=530&preview_id=530&preview_nonce=e840238d1a&preview=true"><img src="IMG/frog.jpg" alt="photofrog"></a>
+                        <a href="http://bealimpetersen.dk/blog/?page_id=174"><img src="IMG/movingart.jpg" alt="movingart"></a>
+                        <a href="http://bealimpetersen.dk/blog/?page_id=398"><img src="IMG/krabbe.jpg" alt="crab"></a>
+                        <a href="http://bealimpetersen.dk/blog/?page_id=66"><img src="IMG/stopmotion.jpg" alt="stopmotion"></a>
+                        <a href="http://bealimpetersen.dk/blog/?page_id=332"><img src="IMG/emilspizza.jpg" alt="emilspizza"></a>
+                        <a href="http://bealimpetersen.dk/blog/?page_id=268"><img src="IMG/movie1.jpg" alt="repeatfitness"></a>
+                        <a href="#"><img src="IMG/kamera.jpg" alt="pentoolkamera"></a>
+                        <a href="http://bealimpetersen.dk/blog/?page_id=402"><img src="IMG/Rune.jpg" alt="rune-pentool"></a>
+                        <a href="http://bealimpetersen.dk/blog/?page_id=530&preview_id=530&preview_nonce=e840238d1a&preview=true"><img src="IMG/reklamevand.jpg" alt="reklamevand"></a>
+                        <a href="http://bealimpetersen.dk/blog/?page_id=174"><img src="IMG/monthy.jpg" alt="monthy"></a>
                         <a href="#"><img src="IMG/icon-photo.png"></a>
                         <a href="#"><img src="IMG/icon-photo.png"></a>
                         <a href="#"><img src="IMG/icon-photo.png"></a>
