editet text & added photo

--- a/portfolio.html
+++ b/portfolio.html
@@ -24,21 +24,18 @@
     	<section class="portfolio-page">
     		<h1>Porteføjle</h1>
     			<div class="gallery">
-                        <a href="http://bealimpetersen.dk/blog/?page_id=402"><img src="IMG/pentoolopg.jpg" alt="bea-pentool"></a>
-                        <a href="http://bealimpetersen.dk/blog/?page_id=530&preview_id=530&preview_nonce=e840238d1a&preview=true"><img src="IMG/frog.jpg" alt="photofrog"></a>
-                        <a href="http://bealimpetersen.dk/blog/?page_id=174"><img src="IMG/movingart.jpg" alt="movingart"></a>
-                        <a href="http://bealimpetersen.dk/blog/?page_id=398"><img src="IMG/krabbe.jpg" alt="crab"></a>
-                        <a href="http://bealimpetersen.dk/blog/?page_id=66"><img src="IMG/stopmotion.jpg" alt="stopmotion"></a>
-                        <a href="http://bealimpetersen.dk/blog/?page_id=332"><img src="IMG/emilspizza.jpg" alt="emilspizza"></a>
-                        <a href="http://bealimpetersen.dk/blog/?page_id=268"><img src="IMG/movie1.jpg" alt="repeatfitness"></a>
-                        <a href="#"><img src="IMG/kamera.jpg" alt="pentoolkamera"></a>
-                        <a href="http://bealimpetersen.dk/blog/?page_id=402"><img src="IMG/Rune.jpg" alt="rune-pentool"></a>
-                        <a href="http://bealimpetersen.dk/blog/?page_id=530&preview_id=530&preview_nonce=e840238d1a&preview=true"><img src="IMG/reklamevand.jpg" alt="reklamevand"></a>
-                        <a href="http://bealimpetersen.dk/blog/?page_id=174"><img src="IMG/monthy.jpg" alt="monthy"></a>
-                    <a href="#"><img src="IMG/icon-photo.png"></a>
-                    <a href="#"><img src="IMG/icon-photo.png"></a>
-                    <a href="#"><img src="IMG/icon-photo.png"></a>
-                    <a href="#"><img src="IMG/icon-photo.png"></a>
+                    <a href="http://bealimpetersen.dk/blog/?page_id=402"><img src="IMG/pentoolopg.jpg" alt="bea-pentool"></a>
+                    <a href="http://bealimpetersen.dk/blog/?page_id=530"><img src="IMG/frog.jpg" alt="photofrog"></a>
+                    <a href="http://bealimpetersen.dk/blog/?page_id=174"><img src="IMG/movingart.jpg" alt="movingart"></a>
+                    <a href="http://bealimpetersen.dk/blog/?page_id=398"><img src="IMG/krabbe.jpg" alt="crab"></a>
+                    <a href="http://bealimpetersen.dk/blog/?page_id=66"><img src="IMG/stopmotion.jpg" alt="stopmotion"></a>
+                    <a href="http://bealimpetersen.dk/blog/?page_id=332"><img src="IMG/emilspizza.jpg" alt="emilspizza"></a>
+                    <a href="http://bealimpetersen.dk/blog/?page_id=268"><img src="IMG/movie1.jpg" alt="repeatfitness"></a>
+                    <a href="#"><img src="IMG/kamera.jpg" alt="pentoolkamera"></a>
+                    <a href="http://bealimpetersen.dk/blog/?page_id=402"><img src="IMG/Rune.jpg" alt="rune-pentool"></a>
+                    <a href="http://bealimpetersen.dk/blog/?page_id=530"><img src="IMG/reklamevand.jpg" alt="reklamevand"></a>
+                    <a href="http://bealimpetersen.dk/blog/?page_id=174"><img src="IMG/monthy.jpg" alt="monthy"></a>
+                    <a href="http://bealimpetersen.dk/blog/?page_id=532"><img src="IMG/produktvideo.jpg" alt="product-video"></a>
         		</div>
 		</section>
 
