--- a/index.html
+++ b/index.html
@@ -47,15 +47,15 @@
                             <p>Hejsa, mit navn er Bea Lim Petersen, jeg er 31 år og bosat i hus i Odense N, (Næsby). Her bor jeg sammen med min kæreste og vores franske Bulldog Møffe.
                             <br>
                             <br>
-                            Jeg er netop startet på Multimediedesigner uddannelsen, og har forinden igennem 3 år, arbejdet som børne- og unge socialrådgiver i Odense. Men har længe gerne ville arbejde med mine kreative kompetencer. 
+                            Jeg er startede i september 2020 på multimediedesign uddannelsen, da jeg ønskede at arbejde med mine kreative kompetencer. Forinden har jeg arbejdet 3 år som socialrådgiver i Børne- og Ungerådgivningen i Odense.
                             <br>
                             <br>
                             Jeg er en positiv, nysgerrig og imødekommende person, som er klar på nye opgaver og ikke er bange for nye udfordinger. Jeg er fyldt med energi og nyder derfor at have flere bolde i luften samtidig. 
-                            Jeg er lærenem og vil altid et ønske om at udvide min horisont indenfor et nyt emne, hvor jeg kan dygtiggøre mig og få mere erfaring. 
+                            Jeg er lærevillig og ønsker at udvide min horisont indenfor et nyt emner, hvor jeg kan dygtiggøre mig og få mere erfaring. 
                             Jeg har gennem min uddannelse tillært mig gode kompetencer inden for bl.a. design, kommunikation og interaktion.
                             <br>
                             <br>
-                            I fritiden træner jeg i Repeat fitness og er netop startet på introhold til tennis. Endvidere bruger jeg gerne meget tid sammen med familien og vennerne.
+                            I fritiden træner jeg i Repeat fitness og bruger gerne meget tid sammen med familien og venner.
                             Jeg er utrolig glad for at rejse, og tager gerne på fjerne rejser, når det er muligt.
                             </p>
                     </div>        
@@ -68,17 +68,17 @@
                                 <div class="icon__container">
                                     <img src="IMG/icon-pen.png" alt="icon-pen">
                                     <p>
-                                        Har en stor passion for grafisk design, både digitalt og til print. 
+                                        Har en stor interesse for grafisk design, både digitalt og til print. 
                                     <br>
-                                        Jeg har stor erfaring indenfor Illustrator, Indesign, Photoshop. 
+                                        Mestrer programmer som Illustrator, Indesign og Photoshop. 
                                     </p>
                                 </div>
                                 <div class="icon__container">
                                     <img src="IMG/icon-lightbulb.png" alt="icon-lightbulb">
                                     <p>
-                                    Har en stor passion for grafisk design, både digitalt og til print. 
+                                        Jeg er iderig, kreativ og har gode kommunikative evner. 
                                     <br>
-                                    Jeg har stor erfaring indenfor Illustrator, Indesign, Photoshop. 
+                                        Det tiltaler mig især med visuel kommunikation. 
                                     </p>
                                 </div>
                                  <div class="icon__container">
@@ -87,8 +87,6 @@
                                         Et billede siger mere end 1000 ord - 
                                     <br>
                                     Jeg er vild med at tage billeder og video, og skabe en historie, blot ved brug af et kamera. 
-                                    <br>
-                                    Jeg anvender selv xx. 
                                     </p>
                                 </div>
                             </div>
@@ -100,7 +98,7 @@
                 <h1>Portefølje</h1>
                     <div class="gallery">
                         <a href="http://bealimpetersen.dk/blog/?page_id=402"><img src="IMG/pentoolopg.jpg" alt="bea-pentool"></a>
-                        <a href="http://bealimpetersen.dk/blog/?page_id=530&preview_id=530&preview_nonce=e840238d1a&preview=true"><img src="IMG/frog.jpg" alt="photofrog"></a>
+                        <a href="http://bealimpetersen.dk/blog/?page_id=530"><img src="IMG/frog.jpg" alt="photofrog"></a>
                         <a href="http://bealimpetersen.dk/blog/?page_id=174"><img src="IMG/movingart.jpg" alt="movingart"></a>
                         <a href="http://bealimpetersen.dk/blog/?page_id=398"><img src="IMG/krabbe.jpg" alt="crab"></a>
                         <a href="http://bealimpetersen.dk/blog/?page_id=66"><img src="IMG/stopmotion.jpg" alt="stopmotion"></a>
@@ -108,12 +106,9 @@
                         <a href="http://bealimpetersen.dk/blog/?page_id=268"><img src="IMG/movie1.jpg" alt="repeatfitness"></a>
                         <a href="#"><img src="IMG/kamera.jpg" alt="pentoolkamera"></a>
                         <a href="http://bealimpetersen.dk/blog/?page_id=402"><img src="IMG/Rune.jpg" alt="rune-pentool"></a>
-                        <a href="http://bealimpetersen.dk/blog/?page_id=530&preview_id=530&preview_nonce=e840238d1a&preview=true"><img src="IMG/reklamevand.jpg" alt="reklamevand"></a>
+                        <a href="http://bealimpetersen.dk/blog/?page_id=530"><img src="IMG/reklamevand.jpg" alt="reklamevand"></a>
                         <a href="http://bealimpetersen.dk/blog/?page_id=174"><img src="IMG/monthy.jpg" alt="monthy"></a>
-                        <a href="#"><img src="IMG/icon-photo.png"></a>
-                        <a href="#"><img src="IMG/icon-photo.png"></a>
-                        <a href="#"><img src="IMG/icon-photo.png"></a>
-                        <a href="#"><img src="IMG/icon-photo.png"></a>
+                        <a href="http://bealimpetersen.dk/blog/?page_id=532"><img src="IMG/produktvideo.jpg" alt="product-video"></a>
                     </div>
             </section>
 
