--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                             <br>
                             <br>
                             Jeg er en positiv, nysgerrig og imødekommende person, som er klar på nye opgaver og ikke er bange for nye udfordinger. Jeg er fyldt med energi og nyder derfor at have flere bolde i luften samtidig. 
-                            Jeg er lærevillig og ønsker at udvide min horisont indenfor et nyt emner, hvor jeg kan dygtiggøre mig og få mere erfaring. 
+                            Jeg er lærevillig og ønsker at udvide min horisont indenfor et nye emner, hvor jeg kan dygtiggøre mig og få mere erfaring. 
                             Jeg har gennem min uddannelse tillært mig gode kompetencer inden for bl.a. design, kommunikation og interaktion.
                             <br>
                             <br>
