givet lidt mere space forneden.

--- a/portfolio.html
+++ b/portfolio.html
@@ -31,7 +31,7 @@
                     <a href="http://bealimpetersen.dk/blog/?page_id=66"><img src="IMG/stopmotion.jpg" alt="stopmotion"></a>
                     <a href="http://bealimpetersen.dk/blog/?page_id=332"><img src="IMG/emilspizza.jpg" alt="emilspizza"></a>
                     <a href="http://bealimpetersen.dk/blog/?page_id=268"><img src="IMG/movie1.jpg" alt="repeatfitness"></a>
-                    <a href="#"><img src="IMG/kamera.jpg" alt="pentoolkamera"></a>
+                    <a href="http://bealimpetersen.dk/blog/?page_id=400"><img src="IMG/skrivebord4.jpg" alt="projekt3"></a>
                     <a href="http://bealimpetersen.dk/blog/?page_id=402"><img src="IMG/Rune.jpg" alt="rune-pentool"></a>
                     <a href="http://bealimpetersen.dk/blog/?page_id=530"><img src="IMG/reklamevand.jpg" alt="reklamevand"></a>
                     <a href="http://bealimpetersen.dk/blog/?page_id=174"><img src="IMG/monthy.jpg" alt="monthy"></a>
