--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                                 <div class="icon__container">
                                     <img src="IMG/icon-pen.png" alt="icon-pen">
                                     <p>
-                                        Har en stor interesse for grafisk design, både digitalt og til print. 
+                                        Jeg nyder at udvikle grafiske elementer, ekempelvis som logoer. 
                                     <br>
                                         Mestrer programmer som Illustrator, Indesign og Photoshop. 
                                     </p>
@@ -76,9 +76,9 @@
                                 <div class="icon__container">
                                     <img src="IMG/icon-lightbulb.png" alt="icon-lightbulb">
                                     <p>
-                                        Jeg er iderig, kreativ og har gode kommunikative evner. 
+                                        Jeg er iderig, kreativ og har gode digitale kommunikative evner. 
                                     <br>
-                                        Det tiltaler mig især med visuel kommunikation. 
+                                        Rutineret bruger af sociale medier som Facebook, Instagram og Youtube 
                                     </p>
                                 </div>
                                  <div class="icon__container">
@@ -101,7 +101,7 @@
                         <a href="http://bealimpetersen.dk/blog/?page_id=530"><img src="IMG/frog.jpg" alt="photofrog"></a>
                         <a href="http://bealimpetersen.dk/blog/?page_id=174"><img src="IMG/movingart.jpg" alt="movingart"></a>
                         <a href="http://bealimpetersen.dk/blog/?page_id=398"><img src="IMG/krabbe.jpg" alt="crab"></a>
-                        <a href="http://bealimpetersen.dk/blog/?page_id=66"><img src="IMG/stopmotion.jpg" alt="stopmotion"></a>
+                        <a href="http://bealimpetersen.dk/blog/?page_id=52"><img src="IMG/stopmotion.jpg" alt="stopmotion"></a>
                         <a href="http://bealimpetersen.dk/blog/?page_id=332"><img src="IMG/emilspizza.jpg" alt="emilspizza"></a>
                         <a href="http://bealimpetersen.dk/blog/?page_id=268"><img src="IMG/movie1.jpg" alt="repeatfitness"></a>
                         <a href="http://bealimpetersen.dk/blog/?page_id=400"><img src="IMG/skrivebord4.jpg" alt="projekt3"></a>
