--- a/index.html
+++ b/index.html
@@ -101,13 +101,18 @@
                         <a href="http://bealimpetersen.dk/blog/?page_id=530"><img src="IMG/frog.jpg" alt="photofrog"></a>
                         <a href="http://bealimpetersen.dk/blog/?page_id=174"><img src="IMG/movingart.jpg" alt="movingart"></a>
                         <a href="http://bealimpetersen.dk/blog/?page_id=398"><img src="IMG/krabbe.jpg" alt="crab"></a>
-                        <a href="http://bealimpetersen.dk/blog/?page_id=52"><img src="IMG/stopmotion.jpg" alt="stopmotion"></a>
+                        <a href="http://bealimpetersen.dk/blog/?page_id=644"><img src="IMG/draw1.jpg" alt="draw1"></a>
+                        <a href="http://bealimpetersen.dk/blog/?page_id=624"><img src="IMG/stopmotion.jpg" alt="stopmotion"></a>
                         <a href="http://bealimpetersen.dk/blog/?page_id=332"><img src="IMG/emilspizza.jpg" alt="emilspizza"></a>
+                        <a href="http://bealimpetersen.dk/blog/?page_id=644"><img src="IMG/draw2.jpg" alt="draw3"></a>
                         <a href="http://bealimpetersen.dk/blog/?page_id=268"><img src="IMG/movie1.jpg" alt="repeatfitness"></a>
                         <a href="http://bealimpetersen.dk/blog/?page_id=400"><img src="IMG/skrivebord4.jpg" alt="projekt3"></a>
-                        <a href="http://bealimpetersen.dk/blog/?page_id=402"><img src="IMG/Rune.jpg" alt="rune-pentool"></a>
+                        <a href="http://bealimpetersen.dk/blog/?page_id=626"><img src="IMG/Rune.jpg" alt="rune-pentool"></a>
                         <a href="http://bealimpetersen.dk/blog/?page_id=530"><img src="IMG/reklamevand.jpg" alt="reklamevand"></a>
-                        <a href="http://bealimpetersen.dk/blog/?page_id=174"><img src="IMG/monthy.jpg" alt="monthy"></a>
+                        <a href="http://bealimpetersen.dk/blog/?page_id=93"><img src="IMG/hund.jpg" alt="hundedating"></a>
+                        <a href="http://bealimpetersen.dk/blog/?page_id=644"><img src="IMG/draw3.jpg" alt="draw3"></a>
+                        <a href="http://bealimpetersen.dk/blog/?page_id=66"><img src="IMG/modeller.jpg" alt="Projekt1"></a>
+                        <a href="http://bealimpetersen.dk/blog/?page_id=636"><img src="IMG/monthy.jpg" alt="monthy"></a>
                         <a href="http://bealimpetersen.dk/blog/?page_id=532"><img src="IMG/produktvideo.jpg" alt="product-video"></a>
                     </div>
             </section>
