prøvet at fixe text...

--- a/index.html
+++ b/index.html
@@ -24,10 +24,7 @@
             <main class="welcomepicture">
                 <div class="welcometext">
                     <h1>Bea Lim Petersen</h1>
-                    Velkommen til mit digitale skrivebord! 
-                    <br>
-                    Se mit arbejde her
-                    <br>
+                    <p>Velkommen til mit digitale skrivebord!</p>
                         <ul>
                             <li><a href="portfolio.html">Portefølje</a></li>
                         </ul>
