--- a/portfolio.html
+++ b/portfolio.html
@@ -11,7 +11,7 @@
     <body>
         <header>
             <div class="logo">
-                <a href="index.html"><img src="IMG/logo.png" alt="logo"></a>
+                <a href="index.html"><img class="logo-bea" src="IMG/logo.png" alt="logo-bea"></a>
             </div>
             <nav>
                 <ul>
